--- a/graphics/wtest.html
+++ b/graphics/wtest.html
@@ -195,61 +195,11 @@
         });
     })();
 
-    function setCookie(_metricsId){
-        var cookieString = COOKIE_NAME + "=" + _metricsId;
-        var date = new Date();
-        date.setTime(date.getTime() + (90*24*60*60*1000)); // cookie 90 days
-        expires = "; expires=" + date.toUTCString();
-        document.cookie = cookieString + expires + "; path=/";
-        console.log("Set cookie " + cookieString + expires);
-
-        return _metricsId
-    }
-
-    function getCookieValue(name) {
-        //console.log("Get cookie in getCookie " + document.cookie);
-        const regex = new RegExp(`(^| )${name}=([^;]+)`)
-        const match = document.cookie.match(regex)
-        if (match) {
-            return match[2]
-        }
-   }
-
-    function deleteCookie(name) {
-        document.cookie = name +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
-        console.log("Delete cookie " + name);
-    }
-
-    function test() {
-        var e = document.getElementById("metrics");
-        var value = e.value;
-        var text = e.options[e.selectedIndex].text;
-
-        addCharts(value, text);
-        
-        deleteCookie(COOKIE_NAME);
-
-        // set cookie
-        if(!metricsId.includes(value)){
-            if(metricsId.length == 0) 
-                metricsId = value;
-            else
-                metricsId = metricsId + "!$" + value;
-
-            setCookie(metricsId);
-        }
-    }
-
-    document.getElementById('metrics').addEventListener("change", test);
-
+    document.getElementById('metrics').addEventListener("change", changeMetrics);
 
     function init(){
         console.log("get cookie " + document.cookie);
         cook = getCookieValue(COOKIE_NAME);
-
-        //TODO: Borrar
-        //console.log("cook " + cook);
-        //cook = "realized_price!$power_law!$200dma";
 
         if(!(cook === undefined || cook == null || (typeof value === "string" && value.trim().length === 0))) {
             var metric = cook.split('!$');
@@ -268,10 +218,6 @@
                 addCharts(metric[i], text);
             }
         }
-    }
-
-    function deleteSeries() {
-        chart.series[1].remove(false);
     }
 
     </script>
