--- a/tools/web-generation-model-workspace-end.html
+++ b/tools/web-generation-model-workspace-end.html
@@ -27,13 +27,16 @@
           <h5>Workspace for BGeometrics charts</h5>
         </a>
         <p> 
-          On this screen we increase the operation by allowing the inclusion of on-chain bitcoin metrics on demand.
+	  In this workspace screen we increase the operation of the BGeometrics graphs by allowing the inclusion of on-chain bitcoin metrics on demand.
           <br><br>
-          The graph initially appears only the price of BTC but different metrics can be selected and incorporated.
+          Only the price of BTC appears on the graph initially, but different metrics can be selected and incorporated.
           <br><br>
-          In the drop-down menu at the top left you will find the available metrics and once selected they will be added to the chart.
+          In the dropdown menu at the top left you will find the available metrics and once selected they will be added to the chart.
           <br><br>
-          If you do not want to display a metric you can click on the legend to prevent it from being displayed on the chart.
+          All the graphs you add will be saved so that the next time you access the workspace they will already appear loaded.
+          <br><br>
+          If you do not want to display a metric, you can press the remove button or click the legend to prevent it from being displayed on the chart.
+          <br><br>
         </p>
       </div>
     </section>
