--- a/workspace_dark.html
+++ b/workspace_dark.html
@@ -564,7 +564,7 @@
             <div id="searchResults"></div>
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="650px" margin="auto" padding="1px" src="graphics/workspace.html" allow="fullscreen" title="BGeometrics Workspace" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="650px" margin="auto" padding="1px" src="graphics/workspace_dark.html" allow="fullscreen" title="BGeometrics Workspace" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
@@ -576,7 +576,7 @@
 
     <section>
       <div class="container">
-        <a href="graphics/workspace.html">
+        <a href="graphics/workspace_dark.html">
           <h5>Workspace for BGeometrics charts</h5>
         </a>
         <p> 
