--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -151,6 +151,7 @@
             }],
 
             series: [{
+                id:'BTC price',
                 name: 'BTC price',
                 color: 'black',
                 data: data_price,
