--- a/graphics/workspace_dark.html
+++ b/graphics/workspace_dark.html
@@ -153,6 +153,7 @@
             }],
 
             series: [{
+                id:'BTC price',
                 name: 'BTC price',
                 color: 'white',
                 data: data_price,
