--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -238,7 +238,7 @@ function deleteLast(cad, subcad) {
         console.log("index");
         return cad.substring(0, index);
     }
-    return cadena;
+    return cad;
 }
 
     
