--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -51,7 +51,7 @@
             <option value="thermo_cap_axis">Thermo Capitalization</option>
             <option value="fear_greed_axis">Fear and Greed</option>
             <option value="hw_age_6m__axis">BTC LTH (>6m) %</option>
-            <option value="address_10k_1k_axis">Addr. coins BTC &gt;1000 &lt;10000</option>
+            <option value="address_10k_1k_axis">Coins Addr. BTC &gt;1000 &lt;10000</option>
             <option value="sp500_yf_axis">SP&500</option>
             <option value="gold_yf_axis">Gold</option>
             <option value="tsla_yf_axis">Tesla</option>
