--- a/graphics/distribution_coin_whale.html
+++ b/graphics/distribution_coin_whale.html
@@ -120,6 +120,7 @@
             }, {
                 name: 'BTC price',
                 data: data_price,
+                color: 'black',
                 tooltip: {
                     valueDecimals: 2
                 },
