--- a/graphics/distribution_coin_whale_dark.html
+++ b/graphics/distribution_coin_whale_dark.html
@@ -122,6 +122,7 @@
             }, {
                 name: 'BTC price',
                 data: data_price,
+                color: 'white',
                 tooltip: {
                     valueDecimals: 2
                 },
