--- a/distribution_realized_price.html
+++ b/distribution_realized_price.html
@@ -571,6 +571,23 @@
 
       </div>
     </section>
+    <br>
+    <section>
+      <div class="container">
+        <a href="graphics/open_interest_futures.html">
+          <h5>Realized Price Distribution</h5>
+        </a>
+        <p> 
+          The realized price distribution of UTXO (URPD) is a bar chart where at each purchase price it is indicated how much volume of BTC has been purchased.
+          <br><br> 
+          When there are high bars together in a price range, it usually indicates a support zone for that price since a good amount of bitcoin was purchased at those prices.
+          <br><br> 
+          When there are low bars in a price range, it indicates that if the market price reaches that area there may be volatility since there are few investors who have bought at those prices.
+        </p>
+
+      </div>
+
+    </section>
 
   </main><!-- End #main -->
 
