--- a/tools/web-generation-model-workspace-end-dark.html
+++ b/tools/web-generation-model-workspace-end-dark.html
@@ -24,7 +24,7 @@
     <section>
       <div class="container">
         <a href="graphics/workspace_dark.html">
-          <h5>Workspace for BGeometrics charts</h5>
+          <h5>BGeometrics Workspace Bitcoin Charts</h5>
         </a>
         <p> 
 	  In this workspace screen we increase the operation of the BGeometrics graphs by allowing the inclusion of on-chain bitcoin metrics on demand.
