--- a/workspace_zoom.html
+++ b/workspace_zoom.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BGeometrics Workspace Charts</title>
+  <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
   <meta content="__keywords__" name="keywords">
 
@@ -34,21 +34,7 @@
 
 </head>
 
-<body onload="init()">
-
-    <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/stocktools/gui.css">
-    <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
-
-    <script src="https://code.highcharts.com/stock/highstock.js"></script>
-    <script src="https://code.highcharts.com/stock/indicators/indicators-all.js"></script>
-    <script src="https://code.highcharts.com/stock/modules/drag-panes.js"></script>
-    <script src="https://code.highcharts.com/modules/annotations-advanced.js"></script>
-    <script src="https://code.highcharts.com/modules/price-indicator.js"></script>
-    <script src="https://code.highcharts.com/modules/full-screen.js"></script>
-    <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
-    <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <script src="https://charts.bgeometrics.com/assets/js/bgeometrics.js"></script>
+<body>
 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
@@ -78,7 +64,7 @@
         </li><!-- End Search Icon-->
 
         <li class="nav-item dropdown">
-          <a class="nav-link nav-icon" href="workspace.html" alt="BGeometrics Workspace Charts">
+          <a class="nav-link nav-icon" href="workspace.html" alt="BGeometrics Workspace">
 	    <i class="bi bi-person-workspace"></i>
           </a>
         </li>
@@ -565,6 +551,7 @@
 
   </aside><!-- End Sidebar-->
 
+
   <main id="main" class="main">
 
     <section class="section dashboard">
@@ -853,6 +840,21 @@
   <div id="preloader">
     <div class="line"></div>
   </div>
+
+
+     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/stocktools/gui.css">
+     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
+
+     <script src="https://code.highcharts.com/stock/highstock.js"></script>
+     <script src="https://code.highcharts.com/stock/indicators/indicators-all.js"></script>
+     <script src="https://code.highcharts.com/stock/modules/drag-panes.js"></script>
+     <script src="https://code.highcharts.com/modules/annotations-advanced.js"></script>
+     <script src="https://code.highcharts.com/modules/price-indicator.js"></script>
+     <script src="https://code.highcharts.com/modules/full-screen.js"></script>
+     <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
+     <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
+     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+     <script src="https://charts.bgeometrics.com/assets/js/bgeometrics.js"></script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
