--- a/workspace.html
+++ b/workspace.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BGeometrics</title>
+  <title>BGeometrics Workspace Charts</title>
   <meta content="Bitcoin Price" name="description">
   <meta content="__keywords__" name="keywords">
 
@@ -34,7 +34,20 @@
 
 </head>
 
-<body>
+<body onload="init()">
+  <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/stocktools/gui.css">
+  <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
+
+  <script src="https://code.highcharts.com/stock/highstock.js"></script>
+  <script src="https://code.highcharts.com/stock/indicators/indicators-all.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/drag-panes.js"></script>
+  <script src="https://code.highcharts.com/modules/annotations-advanced.js"></script>
+  <script src="https://code.highcharts.com/modules/price-indicator.js"></script>
+  <script src="https://code.highcharts.com/modules/full-screen.js"></script>
+  <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+  <script src="https://charts.bgeometrics.com/assets/js/bgeometrics.js"></script>
 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
@@ -551,29 +564,252 @@
 
   </aside><!-- End Sidebar-->
 
+
   <main id="main" class="main">
 
     <section class="section dashboard">
+      <div id="searchResults"></div>
+
       <div class="row">
-        <div id="searchResults"></div>
-
-        <!-- Left side columns -->
-        <div class="col-lg-12">
-          <div class="row">
-
-            <div id="searchResults"></div>
-            <div id="container-iframe" class="row d-flex justify-content-center">
-              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="650px" margin="auto" padding="1px" src="graphics/workspace.html" allow="fullscreen" title="BGeometrics Workspace" scrolling="no" frameBorder="0"></iframe>
-              </div>
-            </div>
-
+        <div class="col">
+          <select class="form-select" id="metrics" style="width:300px;">
+              <option selected>Bitcoin Metrics On-Chain</option>
+              <option value="realized_price">Realized Price</option>
+              <option value="delta_cap">Delta cap</option>
+              <option value="power_law">Power Law</option>
+              <option value="power_law_floor">Power Law Floor</option>
+              <option value="50dma">50 day MA</option>
+              <option value="155dma">155 day MA</option>
+              <option value="200dma">200 day MA</option>
+              <option value="sopr_axis">SOPR</option>
+              <option value="sth_sopr_axis">SOPR STH</option>
+              <option value="lth_sopr_axis">SOPR LTH</option>
+              <option value="mvrv_zscore_axis">MVRV Z-Score</option>
+              <option value="mvrv_axis">MVRV</option>
+              <option value="sth_mvrv_axis">MVRV STH</option>
+              <option value="lth_mvrv_axis">MVRV LTH</option>
+              <option value="sth_realized_price">Realized Price STH</option>
+              <option value="lth_realized_price">Realized Price LTH</option>
+              <option value="nupl_axis">NUPL</option>
+              <option value="aviv_axis">AVIV</option>
+              <option value="addresses_active_axis">Active Addresses</option>
+              <option value="rhodl_1m_axis">RHodl 1m</option>
+              <option value="market_cap_axis">Market Capitalization</option>
+              <option value="realized_cap_axis">Realized Capitalization</option>
+              <option value="investor_cap_axis">Investor Capitalization</option>
+              <option value="thermo_cap_axis">Thermo Capitalization</option>
+              <option value="fear_greed_axis">Fear and Greed</option>
+              <option value="hw_age_6m__axis">BTC LTH (>6m) %</option>
+              <option value="address_10k_1k_axis">Coins Addr. BTC &gt;1000 &lt;10000</option>
+              <option value="sp500_yf_axis">SP&500</option>
+              <option value="gold_yf_axis">Gold</option>
+              <option value="tsla_yf_axis">Tesla</option>
+              <option value="mstr_yf_axis">MicroStrategy</option>
+            </select>
           </div>
-        </div><!-- End Left side columns -->
 
-      </div>
+          <div class="col">
+              <button class="btn" onclick="deleteSeries()">Remove</button>
+          </div>
+
+          <div class="col">
+            <select class="form-select" id="zoom" style="width:120px;">
+                <option selected>Zoom</option>
+                <option value="600">600px</option>
+                <option value="700">700px</option>
+                <option value="800">800px</option>
+                <option value="900">900px</option>
+                <option value="1000">1000px</option>
+                <option value="1100">1100px</option>
+                <option value="1200">1200px</option>
+                <option value="1300">1300px</option>
+                <option value="1400">1400px</option>
+                <option value="1500">1500px</option>
+                <option value="1600">1600px</option>
+            </select>
+          </div>
+
+        </div>
+
+        <div id="container-iframe" style="width:100%; height:600px; margin: 0 auto;"></div>
+
+        <script>
+            var zoomChart = 600;
+            var metricsId = "";
+            const COOKIE_NAME = "bg";
+
+            (async () => {
+                const data_price = await fetch(
+                    'https://charts.bgeometrics.com/files/realized_price_btc_price.json'
+                ).then(response => response.json());
+
+            chart = Highcharts.stockChart('container-iframe', {
+                stockTools: {
+                    gui: {
+                        buttons: ['linLogSwitch', 'separator', 'indicators', 'separator', 'simpleShapes', 'lines', 'crookedLines', 'measure', 'advanced', 'separator', 'verticalLabels', 'flags', 'separator', 'zoomChange', 'fullScreen', 'separator', 'currentPriceIndicator', 'toggleAnnotations'],
+                        definitions: {
+                            linLogSwitch: {
+                                className: 'highcharts-lin-log-switch',
+                                symbol: 'logarithmic.svg'
+                            }
+                        }
+                    }
+                },
+                navigation: {
+                    bindings: {
+                        linLogSwitch: {
+                            className: 'highcharts-lin-log-switch',
+                            init: function (button) {
+                                const chart = this.chart,
+                                    isLogarithmic = chart.yAxis[1].logarithmic,
+                                    axisTypeIcon = isLogarithmic ? 'logarithmic.svg' : 'linear.svg',
+                                    iconURL = 'https://code.highcharts.com/9.2.2/gfx/stock-icons/' + axisTypeIcon;
+
+                                chart.yAxis[0].update({
+                                    type: isLogarithmic ? 'linear' : 'logarithmic',
+                                    minorTickInterval: isLogarithmic ? null : 'auto'
+                                }, false)    
+                                chart.yAxis[1].update({
+                                    type: isLogarithmic ? 'linear' : 'logarithmic',
+                                    minorTickInterval: isLogarithmic ? null : 'auto'
+                                });
+
+                                button.firstChild.style['background-image'] = `url(${iconURL})`;
+
+                                Highcharts.fireEvent(
+                                    this,
+                                    'deselectButton',
+                                    { button: button }
+                                );
+                            }
+                        }
+                    }
+                },
+                title: {
+                    text: 'BGeometrics Workspace',
+                    align: 'left',
+                },
+
+                chart: {
+                    renderTo: 'container-iframe',
+                    events: {
+                        load: function() {
+                            var image = new Image();
+                            var adresse_image = "https://charts.bgeometrics.com/assets/img/BGeometrics_logo.png";
+                            image.src = adresse_image;
+
+                            var height_image = 128;
+                            var width_image = 128;
+                            var textX = this.plotLeft + (this.plotWidth * 0.5);
+                            var textY = this.plotTop + (this.plotHeight * 0.5);
+                            var position_x = textX - width_image / 2;
+                            var position_y = textY - height_image / 2;
+                            this.renderer.image(adresse_image, position_x, position_y, width_image, height_image)
+                                .css({position: 'relative', "margin-left": "-90px", opacity: 0.1})
+                                .attr({zIndex: 1})
+                                .add();
+                        }
+                    }
+                },
+
+                yAxis: [{
+                    title: {
+                        text: 'BTC price'
+                    },
+                    type: 'logarithmic',
+                }, {
+                    opposite: false
+                }],
+
+                series: [{
+                    id:'BTC price',
+                    name: 'BTC price',
+                    color: 'black',
+                    data: data_price,
+                    tooltip: {
+                        valueDecimals: 2
+                    },
+                    yAxis: 0
+                }],
+
+                legend:{
+                    enabled:true,
+                    floating: true,
+                    verticalAlign: 'top',
+                    y: 25,
+                    align:'center'
+                },
+
+                rangeSelector: {
+                    selected: 5
+                },
+
+                credits: {
+                    text: 'Power by BGeometrics.com',
+                    href: 'https://charts.bgeometrics.com',
+                    style: {
+                        font: '11px sans-serif, Verdana, "Trebuchet MS"'
+                    },
+                    position: {
+                        align: 'right',
+                        x: -70,
+                        y: -124
+                    }                
+                },
+                responsive: {
+                    rules: [{
+                        condition: {
+                            maxWidth: 800
+                        },
+                        chartOptions: {
+                            rangeSelector: {
+                                inputEnabled: false
+                            }
+                        }
+                    }]
+                }
+            });
+        })();
+
+        function init(){
+            cook = getCookieValue(COOKIE_NAME);
+
+            if(!(cook === undefined || cook == null || (typeof value === "string" && value.trim().length === 0))) {
+                var metric = cook.split('!$');
+                
+                for (i = 0; i < metric.length; i++) {
+                    // Get text drop-down
+                    Object.values(document.getElementById('metrics').options).
+                        forEach(function (option) {
+                            if(option.value == metric[i]){
+                                text = option.text;
+                                console.log(option.text);
+                            }
+                        });
+
+                    addCharts(metric[i], text);
+                }
+            }
+        }
+
+        document.getElementById('metrics').addEventListener("change", changeMetrics);
+        document.getElementById('zoom').addEventListener("change", zoom);
+
+        function zoom() {
+            var e = document.getElementById("zoom");
+            var value = e.value;
+
+            const iframeDiv = document.getElementById('container-iframe');
+            iframeDiv.style.height = value + 'px'; 
+
+            zoomChart = value;
+        }
+
+        </script>
+
     </section>
 
+    <br>
     <section>
       <div class="container">
         <a href="graphics/workspace.html">
@@ -617,6 +853,21 @@
   <div id="preloader">
     <div class="line"></div>
   </div>
+
+
+     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/stocktools/gui.css">
+     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
+
+     <script src="https://code.highcharts.com/stock/highstock.js"></script>
+     <script src="https://code.highcharts.com/stock/indicators/indicators-all.js"></script>
+     <script src="https://code.highcharts.com/stock/modules/drag-panes.js"></script>
+     <script src="https://code.highcharts.com/modules/annotations-advanced.js"></script>
+     <script src="https://code.highcharts.com/modules/price-indicator.js"></script>
+     <script src="https://code.highcharts.com/modules/full-screen.js"></script>
+     <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
+     <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
+     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+     <script src="https://charts.bgeometrics.com/assets/js/bgeometrics.js"></script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
