--- a/workspace.html
+++ b/workspace.html
@@ -724,7 +724,7 @@
                 series: [{
                     id:'BTC price',
                     name: 'BTC price',
-                    color: 'white',
+                    color: 'black',
                     data: data_price,
                     tooltip: {
                         valueDecimals: 2
