--- a/tools/web-generation-workspace-2.html
+++ b/tools/web-generation-workspace-2.html
@@ -158,7 +158,7 @@
                 series: [{
                     id:'BTC price',
                     name: 'BTC price',
-                    color: 'white',
+                    color: 'black',
                     data: data_price,
                     tooltip: {
                         valueDecimals: 2
